api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  strategy: {}
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - image: northamerica-northeast1-docker.pkg.dev/node-microservices-demo/microservices-demo/api:latest
        name: api
        resources:
          limits:
            cpu: 300m
            memory: 70Mi
          requests:
            cpu: 300m
            memory: 70Mi
status: {}
